fix searchbox bugs on android. long link breaks on search results page

--- a/sphinx_conestack_theme/conestack/static/conestack.css
+++ b/sphinx_conestack_theme/conestack/static/conestack.css
@@ -281,6 +281,10 @@ body {
   grid-area: content;
   height: fit-content;
 }
+.cs-content #search-results {
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+}
 .cs-content .headerlink {
   text-decoration: none;
   padding-left: 8px;
